    org.apache.hadoop.classification.InterfaceAudience not found  (Trevor
    Robinson via tgraves)

    HADOOP-8633. Interrupted FsShell copies may leave tmp files (Daryn Sharp
    via tgraves)

    HADOOP-8703. distcpV2: turn CRC checking off for 0 byte size (Dave
    Thompson via bobby)

    HADOOP-8390. TestFileSystemCanonicalization fails with JDK7  (Trevor
    Robinson via tgraves)

Release 0.23.2 - UNRELEASED 

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-8048. Allow merging of Credentials (Daryn Sharp via tgraves)
 
    HADOOP-8032. mvn site:stage-deploy should be able to use the scp protocol
    to stage documents (Ravi Prakash via tgraves)

    HADOOP-7923. Automate the updating of version numbers in the doc system.
    (szetszwo)

    HADOOP-8137. Added links to CLI manuals to the site. (tgraves via
    acmurthy)  

  OPTIMIZATIONS

    HADOOP-8071. Avoid an extra packet in client code when nagling is
    disabled. (todd)

    HADOOP-6502. Improve the performance of Configuration.getClassByName when
    the class is not found by caching negative results.
    (sharad, todd via todd)

  BUG FIXES

    HADOOP-7660. Maven generated .classpath doesnot includes 
    "target/generated-test-source/java" as source directory.
    (Laxman via bobby)

    HADOOP-8042  When copying a file out of HDFS, modifying it, and uploading
    it back into HDFS, the put fails due to a CRC mismatch
    (Daryn Sharp via bobby)

    HADOOP-8035 Hadoop Maven site is inefficient and runs phases redundantly
    (abayer via tucu)

    HADOOP-8051 HttpFS documentation it is not wired to the generated site (tucu)

    HADOOP-8055. Hadoop tarball distribution lacks a core-site.xml (harsh)

    HADOOP-8052. Hadoop Metrics2 should emit Float.MAX_VALUE (instead of 
    Double.MAX_VALUE) to avoid making Ganglia's gmetad core. (Varun Kapoor
    via mattf)

    HADOOP-8074. Small bug in hadoop error message for unknown commands.
    (Colin Patrick McCabe via eli)
