@@ -736,6 +736,9 @@ Release 0.23.3 - UNRELEASED
     HADOOP-8390. TestFileSystemCanonicalization fails with JDK7  (Trevor
     Robinson via tgraves)
 
+    HADOOP-8692. TestLocalDirAllocator fails intermittently with JDK7 
+    (Trevor Robinson via tgraves)
+
 Release 0.23.2 - UNRELEASED 
 
   NEW FEATURES
